--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ h6 {
     padding: 10px 10px;
     background-color: darkslategray;
     text-align: center;
-    box-shadow: 0px 0px 6px gray;
+    box-shadow: 0px 0px 6px black;
 }
 
 .new {
@@ -102,14 +102,16 @@ h6 {
 .feature {
     width: 33.33%;
     float: left;
-    text-align: left;
     padding: 10px 10px;
+    
 }
 
 .img {
     width: 100%;
-    border-radius: 7px;
+    height: 380px;
+    border-radius: 10px;
     text-align: center;
+    box-shadow: 0px 0px 6px black;
 }
 
 .clr {
@@ -146,6 +148,8 @@ h6 {
 .draw {
     text-align: left;
     float: left;
+    border-radius: 10px;
+
 }
 
 .clring {
@@ -199,6 +203,8 @@ h6 {
     background-size: cover;
     background-position: 50%;
     background-repeat: no-repeat;
+    box-shadow: 0px 0px 6px black;
+    border-radius: 7px;
 }
 
 .img-rez {
@@ -207,7 +213,9 @@ h6 {
     background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(../images/rezaul-karim.jpg);
     height: 400px;
     background-size: cover;
-    background-position: 50%
+    background-position: 50%;
+    box-shadow: 0px 0px 6px black;
+    border-radius: 7px;
 }
 
 .img-paw {
@@ -217,6 +225,8 @@ h6 {
     height: 400px;
     background-size: cover;
     background-position: 50%;
+    box-shadow: 0px 0px 6px black;
+    border-radius: 7px;
 }
 
 .img-mark {
@@ -227,6 +237,8 @@ h6 {
     background-size: cover;
     background-position: 50%;
     background-repeat: no-repeat;
+    box-shadow: 0px 0px 6px black;
+    border-radius: 7px;
 }
 
 .stay {
@@ -274,6 +286,8 @@ h6 {
     background-position: 50%;
     background-size: cover;
     text-align: left;
+    box-shadow: 0px 0px 6px black;
+    border-radius: 7px;
 
 
 }
@@ -329,6 +343,8 @@ h6 {
     background-position: 50%;
     background-size: cover;
     text-align: left;
+    box-shadow: 0px 0px 6px black;
+    border-radius: 7px;
 
 
 }
@@ -339,6 +355,8 @@ h6 {
     background-position: 50%;
     background-size: cover;
     text-align: left;
+    box-shadow: 0px 0px 6px black;
+    border-radius: 7px;
 }
 .love
 {
