--- a/css/style.css
+++ b/css/style.css
@@ -58,15 +58,15 @@ h6 {
     padding: 10px 10px;
     background-color: darkslategray;
     text-align: center;
-    box-shadow: 0px 0px 6px black;
+    box-shadow: 0px 1px 6px black;
+    border-radius: 7px;
 }
-
 .new {
     width: 40%;
     margin: auto;
     right: 0;
     left: 0;
-    top: 10px;
+    top: 5px;
     bottom: 0;
     position: relative;
     color: white;
@@ -109,7 +109,8 @@ h6 {
 .img {
     width: 100%;
     height: 380px;
-    border-radius: 10px;
+    background-color:#171941; 
+    border-radius: 7px;
     text-align: center;
     box-shadow: 0px 0px 6px black;
 }
@@ -363,4 +364,245 @@ h6 {
     width: 90%;
     margin: auto;
     color: gray;
+    font-size: 30px;
+    text-align: center;
+    padding: 60px;
+}
+.social
+{
+    width: 100%;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    
+}
+.container
+{
+    width: 80%;
+    margin: auto;
+    overflow: auto;
+     padding-left: 15px;
+    padding-right: 15px;
+}
+.social-logo
+{
+    width: 16.66%;
+    text-align: center;
+    border-right: 1px solid #222a42;
+    padding-left: 15px;
+    padding-right: 15px;
+    float: left;
+    
+}
+.insta-social-logo
+{
+    width: 16.66%;
+    text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    float: left;
+    background-color:#171941; 
+}
+.twit-icon
+{
+    border: 1px solid #3ea1ec;
+    padding: 30px 30px;
+    border-radius: 7px;
+}
+.fb-icon
+{
+    border: 1px solid #344e86;
+    padding: 30px 30px;
+    border-radius: 7px;
+}
+.google-icon
+{
+    border: 1px solid #d73925;
+    padding: 30px 30px;
+    border-radius: 7px;
+}
+.dribble-icon
+{
+    border: 1px solid #ed679b;
+    padding: 30px 30px;
+    border-radius: 7px;
+}
+.youtube-icon
+{
+    border: 1px solid #e84842;
+    padding: 30px 30px;
+    border-radius: 7px;
+}
+.insta-icon
+{
+    border: 1px solid #1667a3; 
+    padding: 30px 30px;
+    border-radius: 7px;
+}
+.sheltter
+{
+    width: 100%;
+    padding: 50px 0px;
+    
+}
+.our
+{
+    width: 70%;
+    padding: 30px 30px;
+    margin: auto;
+}
+.to
+{
+    width: 85%;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: auto;
+    }
+.news
+{
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    padding: 20px 20px;
+}
+.get
+{
+    color: #9a9a9a;
+    text-align: center;
+    font-size: 20px;
+}
+.card
+{
+    width: 85%;
+    margin: auto;
+    background-color: #1f2251;
+    border: 0;
+    box-shadow: 0 1px 20px rgba(0,0,0,0.1);
+    border-radius: 7px;
+    overflow: auto;
+    padding: 15px 15px;
+
+}
+.your
+{
+    width: 60%;
+    border: 1px solid #9a9a9a;
+    border-radius: 7px;
+    float: left;
+    padding: 13px;
+    box-shadow: 0 1px 10px black; 
+    
+}
+.id
+{
+    color: #9a9a9a;
+    text-align: left;
+
+    
+}
+.form
+{
+    width: 90%;
+    margin: auto;
+    padding: 5px;
+    height: 60px;
+
+    
+}
+.scribe
+{
+    width: 30%;
+     border: 1px solid #9a9a9a;
+    border-radius: 7px;
+    background-color: palevioletred;
+    float: right;
+    text-align: center;
+    height: 45px;
+    margin-top: 3px;
+    box-shadow: 0 0 10px black;
+    
+}
+.sub-text
+{
+  color: white;
+    padding-top: 13px;
+}
+.envelop
+{
+    float: left;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 10%;
+    
+}
+.footer
+{
+    width: 100%;
+    border-top: 2px  solid #435db5;
+    background: radial-gradient(ellipse at bottom,#292d61 30%,#171941 80%);
+    text-align: center;
+    
+}
+.footer-container
+{
+    width: 85%;
+    padding: 15px 15px;
+    margin: auto;
+    overflow: auto;
+}
+.blk
+{
+    width: 20%;
+    float: left;
+    text-align: left;
+    padding: 15px 15px;
+    
+}
+.blk-text
+{
+    color: hsla(0,0%,100%,.8);
+    margin-top: 30px;
+    margin-bottom: 25px;
+    
+}
+.home
+{
+    width: 25%;
+    float: left;
+    text-align: center;
+}
+.foot-ul
+{
+  padding-top: 10px;
+  margin-bottom: 0;
+}
+.foot-li
+{
+    padding: 5px;
+}
+.li-text
+{
+    color: #fff;
+    padding: 10px 5px;
+}
+.follow
+{
+    width: 25%;
+    float: left;
+    text-align: center;
+    padding: 15px 15px;
+    overflow: auto;
+}
+.soc-icon
+{
+    float: left;
+    width: 70%;
+    color: #fff;
+    text-align: left;
+    padding: 15px 15px;
+    margin-left: 50px;
+    
+}
+li
+{
+    list-style: none;
 }
