--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,12 @@ h6 {
 }
 
 .blk {
-    width: 30%;
+    width: 90%;
     float: left;
 }
 
 .menus {
-    width: 50%;
+    width: 70%;
     float: right;
     overflow: auto;
 }
@@ -77,11 +77,16 @@ h6 {
     margin: auto;
     width: 30%;
     overflow: auto;
+    text-align: center;
+    margin-bottom: 40px;
 }
 
 .insta {
+    width: 30%;
     float: left;
     padding: 5px;
+    margin-left: 10px;
+    text-align: center;
     
 }
 
